* Thu Aug 25 2016 Nick Markowski <nmarkowski@keywcorp.com> 4.5.2-0
- Defaulted export sec to sys.
- Updated documentation to reflect krb5 integration with manual changes.

* Fri Aug 12 2016 Nick Miller <nick.miller@onyxpoint.com> - 4.5.1-0
- Added a new README

* Mon Aug 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.5.0-0
- Added Kerberos Support

* Wed Jul 20 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.4.4-0
- Removed create_home_dirs functionality (and added it to the simp module).

* Mon May 16 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.4.3-0
- Sanitized cross-class variables for 'STRICT_VARIABLES=yes'

* Wed Mar 23 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.4.2-0
- Minor bug fix to ensure that $::nfs::stunnel variables are not called if the
  module is not using stunnel.

* Sat Mar 19 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.4.1-0
- Several bug fixes that ensure that the module will work without being bound
  to a Puppet master.

* Fri Mar 18 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.4.0-0
- Ensure that EL6.7+ uses SSSD over NSCD.

* Fri Mar 18 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.3.0-1
- Updated the augeas fixtures to reference the simp-master branch.

* Thu Mar 17 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.3.0-0
- Updated the exports template to convert clients 'all' or 'any' to '*'
- Added an lvm2 class to ensure nfs-utils can upgrade.  This class
  should be removed once the bug is fixed upstream.

* Mon Mar 14 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-0
- Updated to Semantic Versioning
- Fixed the 'eval' variables in the templates

* Fri Dec 04 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.1.0-15
- Replaced all 'lsb*' facts with their (package-independent)
  'operatingsystem*' counterparts.
- Normalized common static module assets.
- Moved parameter validations to the top of each class.

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-14